Archive2/0b/84eb1080418614/output
main.cpp: In instantiation of 'struct error<false>':
main.cpp:9:34:   required from here
main.cpp:5:5: error: static assertion failed: ..
     static_assert(B, "..");
     ^
